redundant settings